--- a/Authorization_with_CanCanCan/app/views/layouts/application.html.erb
+++ b/Authorization_with_CanCanCan/app/views/layouts/application.html.erb
@@ -54,5 +54,11 @@
   <%= yield %>
 </div>
 
+<div id="footer">
+  <div class="container">
+    <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
+  </div>
+</div>
+
 </body>
 </html>
