--- a/Dota_on_Rails/app/views/layouts/application.html.erb
+++ b/Dota_on_Rails/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 
 <nav class="navbar navbar-inverse">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <%= link_to 'Doter', root_path, class: 'navbar-brand' %>
     </div>
@@ -29,7 +29,7 @@
   </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
   <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>">
       <%= value %>
@@ -42,7 +42,7 @@
 </div>
 
 <div id="footer">
-  <div class="container">
+  <div class="container-fluid">
     <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
   </div>
 </div>
