--- a/SimpleUploader/app/views/layouts/application.html.erb
+++ b/SimpleUploader/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
 
 <div class="container">
   <div class="alert alert-info">
-    I will have to remove photos from time to time. Please <strong>do not</strong> add inappropriate content. I am as
-    serious (just like <a href="https://avatars3.githubusercontent.com/u/646942?v=3&s=460" target="_blank">this cat</a>).
+    I will have to remove photos from time to time. Please <strong>do not</strong> add inappropriate content. I are
+    serious (like <a href="https://avatars3.githubusercontent.com/u/646942?v=3&s=460" target="_blank">thiz cat</a>).
   </div>
   <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>">
