more on stream:

--- a/Feeds_with_Stream/app/views/users/_user.html.erb
+++ b/Feeds_with_Stream/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
-<h3><%= user.name %></h3>
+<h3><%= link_to user.name, feed_user_path(user) %></h3>
 
-<% if user.followed(current_user) %>
-  <%= button_to "Unfollow", follow_path(user.followed(current_user)), method: :delete, :class => "btn btn-primary btn-sm btn-danger" %>
+<% if user.followed_by(current_user) %>
+  <%= button_to "Unfollow", follow_path(user.followed_by(current_user)), method: :delete, :class => "btn btn-primary btn-sm btn-danger" %>
 <% else %>
   <%= form_for :follow, url: follows_path do |f| %>
     <%= f.hidden_field :target_id, value: user.id %>
