--- a/Feeds_with_Stream/app/views/feeds/notification.html.erb
+++ b/Feeds_with_Stream/app/views/feeds/notification.html.erb
@@ -1,4 +1,4 @@
-<div class="page-header"><h1><%= @user.name %>'s feed</h1></div>
+<div class="page-header"><h1>Your notification feed</h1></div>
 
 <% for activity in @activities %>
   <%= render_activity activity %>
