--- a/Feeds_with_Stream/app/views/layouts/application.html.erb
+++ b/Feeds_with_Stream/app/views/layouts/application.html.erb
@@ -19,14 +19,15 @@
         <% if user_signed_in? %>
           <li><%= link_to 'New item', new_item_path %></li>
           <li><%= link_to 'Users', users_path %></li>
-          <li><%= link_to 'Flat feed', feed_flat_path %></li>
-          <li><%= link_to 'Aggregated feed', feed_aggregated_path %></li>
+          <li><%= link_to 'Flat news feed', feed_flat_path %></li>
+          <li><%= link_to 'Aggregated news feed', feed_aggregated_path %></li>
+          <li><%= link_to 'Notification feed', feed_notification_path %></li>
           <li>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="glyphicon"></i> <%= current_user.name %><b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'My feed', feed_me_path %></li>
+              <li><%= link_to 'My feed', feed_user_path(current_user) %></li>
               <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
