--- a/Authorization_with_Pundit/app/views/posts/_post.html.erb
+++ b/Authorization_with_Pundit/app/views/posts/_post.html.erb
@@ -4,7 +4,7 @@
   <td><%= post.special? %></td>
   <td><%= link_to 'Show', post %></td>
   <td><%= link_to 'Edit', edit_post_path(post) %></td>
-  <% if true %>
+  <% if policy(post).destroy? %>
     <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   <% end %>
 </tr>
