--- a/Auth_Provider_with_Opro/OproClient/app/views/layouts/application.html.erb
+++ b/Auth_Provider_with_Opro/OproClient/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+<% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %>">
+    <%= value %>
+  </div>
+<% end %>
 <%= yield %>
 
 </body>
