--- a/Auth_Provider_with_Doorkeeper/KeepaClient/app/views/pages/index.html.erb
+++ b/Auth_Provider_with_Doorkeeper/KeepaClient/app/views/pages/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Welcome!</h1>
 
 <% if session[:access_token] %>
-  <%= link_to 'Get User', "http://localhost:3000/api/user?access_token=#{session[:access_token]}" %>
-  <%= link_to 'Update User', "http://localhost:3000/api/user/update?access_token=#{session[:access_token]}" %>
+  <%= link_to 'Get User', user_path %>
+  <%= link_to 'Update User', update_user_path %>
 <% else %>
-  <%= link_to 'Authorize via Keepa', new_oauth_token_path %>
+  <%= link_to 'Authorize via Keepa', '/auth/keepa' %>
 <% end %>
