--- a/Graphs_with_Chartkick/app/views/layouts/application.html.erb
+++ b/Graphs_with_Chartkick/app/views/layouts/application.html.erb
@@ -10,5 +10,11 @@
 
   <body>
     <%= yield %>
+
+    <div id="footer">
+      <div class="container-fluid">
+        <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
+      </div>
+    </div>
   </body>
 </html>
