--- a/Graphs_Chartkick_Practice/app/views/click_tracks/index.html.erb
+++ b/Graphs_Chartkick_Practice/app/views/click_tracks/index.html.erb
@@ -1,8 +1,7 @@
 <h1>Click tracking</h1>
 
-<div id="event_period" class="row" style="margin-bottom: 20px; margin-top: 20px;">
-  <%= form_tag api_click_tracks_path, remote: true do %>
-    <%= hidden_field_tag 'id', @item.id %>
+<div id="event_period" class="row">
+  <%= form_tag api_item_click_tracks_path(@item), remote: true do %>
 
     <div class="col-sm-1">
       <label for="start_date">Start date</label>
@@ -42,7 +41,7 @@
   $(document).ready(function() {
     $('#event_period').datepicker({
       inputs: $('.actual_range'),
-      startDate: new Date('02/08/2013'),
+      startDate: '-3y',
       endDate: '0d',
       todayBtn: 'linked',
       todayHighlight: 'true',
