--- a/Tracking_with_Skylight/app/views/albums/_album.html.erb
+++ b/Tracking_with_Skylight/app/views/albums/_album.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <%= link_to album.title, album_path(album) %> by <%= album.musician %>
+  <strong><%= album.title %></strong> by <%= album.musician %>
   <% unless album.published? %>
     <small>(not yet published)</small>
   <% end %>
