fixes for messaging

--- a/Custom_Messaging_System/app/views/layouts/application.html.erb
+++ b/Custom_Messaging_System/app/views/layouts/application.html.erb
@@ -13,5 +13,9 @@
 <%= render 'shared/menu' %>
 
 <%= yield %>
+
+<footer>
+  <p>Created by <%= link_to 'Ilya Bodrov', 'http://ilyabodrov.me', target: '_blank' %></p>
+</footer>
 </body>
 </html>
