--- a/Custom_Messaging_System/app/assets/stylesheets/application.scss
+++ b/Custom_Messaging_System/app/assets/stylesheets/application.scss
@@ -3,3 +3,22 @@
   overflow-y: auto;
   margin-bottom: 2em;
 }
+
+#notification {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  width: 300px;
+  padding: 10px;
+  border: 1px solid black;
+  background-color: #fff;
+  .close {cursor: pointer}
+}
+
+.online_status {
+  color: red;
+  transition: color 1s ease;
+  &.online {
+    color: green;
+  }
+}
