--- a/Custom_Messaging_System/app/views/shared/_menu.html.erb
+++ b/Custom_Messaging_System/app/views/shared/_menu.html.erb
@@ -5,6 +5,7 @@
 <% end %>
 
 <% if user_signed_in? %>
+  <div id="current-user" data-id="<%= current_user.id %>"></div>
   <p>Signed in as <%= current_user.name %> | <%= link_to 'log out', destroy_user_session_path, method: :delete %></p>
 <% end %>
 <ul>
