--- a/Video_Uploads_with_Ziggeo/app/views/layouts/application.html.erb
+++ b/Video_Uploads_with_Ziggeo/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
 <body>
 
 <div class="container">
+  <% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %>">
+      <%= value %>
+    </div>
+  <% end %>
+
   <%= yield %>
 </div>
 
