--- a/Video_Uploads_with_Ziggeo/app/views/videos/_video.html.erb
+++ b/Video_Uploads_with_Ziggeo/app/views/videos/_video.html.erb
@@ -1,12 +1,13 @@
 <div class="card">
   <div class="card-block">
-    <ziggeo ziggeo-video='<%= video['token'] %>'
-            ziggeo-width=320
-            ziggeo-height=240>
+    <ziggeo ziggeo-video='<%= video.uid %>'
+            ziggeo-width="320"
+            ziggeo-height="240" ziggeo-popup>
     </ziggeo>
     <p>
-      <strong>Duration:</strong> <%= video['duration'] %>s<br>
-      <strong>Created:</strong> <%= Time.at video['created']  %>
+      <strong>Duration:</strong> <%= video.duration %>s<br>
+      <strong>Created:</strong> <%= video.ziggeo_created_at  %>
     </p>
+    <p><%= link_to 'Delete', video_path(video.uid), method: :delete %></p>
   </div>
 </div>
