update readmes and links

--- a/Custom_Messaging_System/app/views/layouts/application.html.erb
+++ b/Custom_Messaging_System/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <%= yield %>
 
 <footer>
-  <p>Created by <%= link_to 'Ilya Bodrov', 'http://ilyabodrov.me', target: '_blank' %></p>
+  <p>Created by <%= link_to 'Ilya Bodrov', 'http://bodrovis.tech', target: '_blank' %></p>
 </footer>
 </body>
 </html>
