--- a/Chat_with_ActionCable_and_Devise/app/views/layouts/application.html.erb
+++ b/Chat_with_ActionCable_and_Devise/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 
 <footer>
   <div class="container">
-    <p class="text-muted">Created by <%= link_to 'Ilya Bodrov', 'http://ilyabodrov.me' %></p>
+    <p class="text-muted">Created by <%= link_to 'Ilya Bodrov', 'http://bodrovis.tech' %></p>
   </div>
 </footer>
 </body>
