radiant wind is now bodrovis.tech

--- a/Authorization_with_CanCanCan/app/views/layouts/application.html.erb
+++ b/Authorization_with_CanCanCan/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 
 <div id="footer">
   <div class="container">
-    <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
+    <p class="text-muted">Created by <a href="http://bodrovis.tech" target="_blank">Radiant Wind</a></p>
   </div>
 </div>
 
