--- a/Dota_on_Rails/app/views/layouts/application.html.erb
+++ b/Dota_on_Rails/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 
 <div id="footer">
   <div class="container-fluid">
-    <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
+    <p class="text-muted">Created by <a href="http://bodrovis.tech" target="_blank">Radiant Wind</a></p>
   </div>
 </div>
 
