--- a/Feeds_with_Stream/app/views/layouts/application.html.erb
+++ b/Feeds_with_Stream/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
 
   <div id="footer">
     <div class="container-fluid">
-      <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
+      <p class="text-muted">Created by <a href="http://bodrovis.tech" target="_blank">Radiant Wind</a></p>
     </div>
   </div>
 </div>
