--- a/Geocoder/app/views/layouts/application.html.erb
+++ b/Geocoder/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 
 <footer>
   <div class="container">
-    <p class="text-muted">Created by <%= link_to 'Radiant Wind', 'http://radiant-wind.com' %></p>
+    <p class="text-muted">Created by <%= link_to 'Radiant Wind', 'http://bodrovis.tech' %></p>
   </div>
 </footer>
 </body>
