--- a/SimpleUploader/app/views/layouts/application.html.erb
+++ b/SimpleUploader/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 
 <div id="footer">
   <div class="container">
-    <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
+    <p class="text-muted">Created by <a href="http://bodrovis.tech" target="_blank">Radiant Wind</a></p>
   </div>
 </div>
 
